--- a/airbnb_bot/try_out.ipynb
+++ b/airbnb_bot/try_out.ipynb
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid input, use integer only!\n"
+      "starting text extraction...\n"
      ]
     }
    ],
@@ -57,11 +57,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sqlite3 as sql\n"
+    "def check_budget_validity(budget):\n",
+    "    try:\n",
+    "        for char in budget:\n",
+    "            if char in \"0123456789\":\n",
+    "                budget = False\n",
+    "            else:\n",
+    "                raise ValueError\n",
+    "        return True\n",
+    "    except(ValueError):\n",
+    "        budget = True\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_budget(\"12ics\")"
    ]
   }
  ],
