--- a/airbnb_bot/try_out.ipynb
+++ b/airbnb_bot/try_out.ipynb
@@ -2,96 +2,117 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found!\n"
-     ]
-    }
-   ],
-   "source": [
-    "import string\n",
-    "\n",
-    "start_sent = input('Hallöchen! Bist du bereit für eine schöne Reise in Berlin?\\n')\n",
-    "start_sent = start_sent.lower().translate(str.maketrans('', '', string.punctuation))  \n",
-    "\n",
-    "confirmation = ['ok', 'klar', 'ja', 'natürlich', 'sicher', 'doch']\n",
-    "\n",
-    "for i in range(len(confirmation)):\n",
-    "    if  confirmation[i] in start_sent:\n",
-    "        print('Found!')\n",
-    "        break\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "starting text extraction...\n"
-     ]
-    }
-   ],
-   "source": [
-    "answer = input('number')\n",
-    "\n",
-    "try:\n",
-    "    for char in answer:\n",
-    "        if char in \"0123456789\":\n",
-    "            answer = False\n",
-    "        else:\n",
-    "            raise ValueError\n",
-    "    print('starting text extraction...')\n",
-    "except(ValueError):\n",
-    "    answer = True\n",
-    "    print(\"Invalid input, use integer only!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_budget_validity(budget):\n",
+    "import sqlite3 as sql\n",
+    "\n",
+    "def query_sql(key, value, budget, stay_nights, columns, sql_file):\n",
+    "    \"\"\"\n",
+    "    Query a sqlite file for entries where \"key\" has the value \"value\".\n",
+    "    Return the values corresponding to columns as a list.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # set up sqlite connection\n",
+    "    conn = sql.connect(sql_file)\n",
+    "    c = conn.cursor()\n",
+    "\n",
+    "\n",
+    "    # prepare query string that contains all three conditions\n",
+    "    query_template = 'SELECT {columns} FROM listings WHERE {key} = \"{value}\" AND price <= {budget} AND minimum_nights <= {stay_nights}'\n",
+    "    columns_string = ', '.join(columns)  # e.g. [location, price] -> 'location, price'\n",
+    "    # replace the curly brackets in query_template with the corresponding info\n",
+    "    query = query_template.format(columns=columns_string, key=key, value=value, budget=budget, stay_nights=stay_nights)\n",
+    "\n",
+    "    # execute query\n",
+    "    r = c.execute(query)\n",
+    "    # get results as list\n",
+    "    results = r.fetchall()\n",
+    "\n",
+    "\n",
+    "    # close connection\n",
+    "    conn.close()\n",
+    "\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Private Room in Berlin!', 'Prenzlauer Berg Nordwest', 15, 1),\n",
+       " ('Cheap Room in Berlin', 'Prenzlauer Berg Südwest', 9, 1),\n",
+       " ('20qm großes Zimmer zu Vermieten', 'Pankow Süd', 15, 1),\n",
+       " ('Bright and Clean Berlin Apartment', 'Helmholtzplatz', 10, 1),\n",
+       " ('gemütliches Zimmer mit Balkon', 'Blankenfelde/Niederschönhausen', 17, 1),\n",
+       " ('International shared flat', 'Weißensee Ost', 16, 1),\n",
+       " ('Habitación 24 m2 en piso 100 m2', 'Prenzlauer Berg Südwest', 18, 1),\n",
+       " ('Sweet Bed inside DDRstyle Apartment', 'Prenzlauer Berg Südwest', 12, 1),\n",
+       " ('Apartment with cat', 'Prenzlauer Berg Süd', 20, 1),\n",
+       " ('Altbau-Charme und Hochbett-Freude', 'Prenzlauer Berg Nordwest', 20, 1)]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query_sql(key='neighbourhood_group', value='Pankow', budget=20, stay_nights=1, columns = ['name', 'neighbourhood', 'price', 'minimum_nights'], sql_file='listings.db')[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_budget():\n",
+    "    budget = input(\"Was ist dein Budget pro Nacht?\\n\")\n",
     "    try:\n",
     "        for char in budget:\n",
     "            if char in \"0123456789\":\n",
-    "                budget = False\n",
+    "                return int(budget)\n",
     "            else:\n",
     "                raise ValueError\n",
-    "        return True\n",
+    "        return budget\n",
     "    except(ValueError):\n",
-    "        budget = True\n",
+    "        print(\"Bitte gib nur eine Zahl ein, damit ich Mathematik machen kann!\")\n",
     "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bitte gib eine Zahl ein, damit ich Mathematik machen kann!\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "False"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_budget(\"12ics\")"
+    "budget = get_budget()\n",
+    "\n",
+    "budget"
    ]
   }
  ],
@@ -111,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
