almost done for filtering

--- a/airbnb_bot/try_out.ipynb
+++ b/airbnb_bot/try_out.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3 as sql\n",
     "\n",
-    "def query_sql(key, value, budget, stay_nights, columns, sql_file):\n",
+    "def query_sql(key, value, budget, stay_nights, wished_room_type, columns, sql_file):\n",
     "    \"\"\"\n",
     "    Query a sqlite file for entries where \"key\" has the value \"value\".\n",
     "    Return the values corresponding to columns as a list.\n",
@@ -20,10 +20,10 @@
     "\n",
     "\n",
     "    # prepare query string that contains all three conditions\n",
-    "    query_template = 'SELECT {columns} FROM listings WHERE {key} = \"{value}\" AND price <= {budget} AND minimum_nights <= {stay_nights}'\n",
+    "    query_template = 'SELECT {columns} FROM listings WHERE {key} = \"{value}\" AND price <= {budget} AND minimum_nights <= {stay_nights} AND room_type = \"{wished_room_type}\"'\n",
     "    columns_string = ', '.join(columns)  # e.g. [location, price] -> 'location, price'\n",
     "    # replace the curly brackets in query_template with the corresponding info\n",
-    "    query = query_template.format(columns=columns_string, key=key, value=value, budget=budget, stay_nights=stay_nights)\n",
+    "    query = query_template.format(columns=columns_string, key=key, value=value, budget=budget, stay_nights=stay_nights, wished_room_type=wished_room_type)\n",
     "\n",
     "    # execute query\n",
     "    r = c.execute(query)\n",
@@ -39,80 +39,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Private Room in Berlin!', 'Prenzlauer Berg Nordwest', 15, 1),\n",
-       " ('Cheap Room in Berlin', 'Prenzlauer Berg Südwest', 9, 1),\n",
-       " ('20qm großes Zimmer zu Vermieten', 'Pankow Süd', 15, 1),\n",
-       " ('Bright and Clean Berlin Apartment', 'Helmholtzplatz', 10, 1),\n",
-       " ('gemütliches Zimmer mit Balkon', 'Blankenfelde/Niederschönhausen', 17, 1),\n",
-       " ('International shared flat', 'Weißensee Ost', 16, 1),\n",
-       " ('Habitación 24 m2 en piso 100 m2', 'Prenzlauer Berg Südwest', 18, 1),\n",
-       " ('Sweet Bed inside DDRstyle Apartment', 'Prenzlauer Berg Südwest', 12, 1),\n",
-       " ('Apartment with cat', 'Prenzlauer Berg Süd', 20, 1),\n",
-       " ('Altbau-Charme und Hochbett-Freude', 'Prenzlauer Berg Nordwest', 20, 1)]"
+       "[('Bright and Clean Berlin Apartment',\n",
+       "  'Helmholtzplatz',\n",
+       "  10,\n",
+       "  1,\n",
+       "  'Entire home/apt'),\n",
+       " ('Apartment with cat', 'Prenzlauer Berg Süd', 20, 1, 'Entire home/apt'),\n",
+       " ('Helle 28qm Einzimmerwohnung in ruhiger Gegend.',\n",
+       "  'Blankenfelde/Niederschönhausen',\n",
+       "  20,\n",
+       "  1,\n",
+       "  'Entire home/apt')]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query_sql(key='neighbourhood_group', value='Pankow', budget=20, stay_nights=1, columns = ['name', 'neighbourhood', 'price', 'minimum_nights'], sql_file='listings.db')[:10]"
+    "query_sql(key='neighbourhood_group', value='Pankow', budget=20, stay_nights=1,  wished_room_type=\"Entire home/apt\", columns = ['name', 'neighbourhood', 'price', 'minimum_nights', 'room_type'], sql_file='listings.db')[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_budget():\n",
-    "    budget = input(\"Was ist dein Budget pro Nacht?\\n\")\n",
+    "def check_validity(var):\n",
+    "    #var = input('Input a number (int) for the Episode you want to check: ')\n",
     "    try:\n",
-    "        for char in budget:\n",
+    "        for char in var:\n",
     "            if char in \"0123456789\":\n",
-    "                return int(budget)\n",
+    "                continue\n",
     "            else:\n",
     "                raise ValueError\n",
-    "        return budget\n",
+    "        return True\n",
     "    except(ValueError):\n",
-    "        print(\"Bitte gib nur eine Zahl ein, damit ich Mathematik machen kann!\")\n",
-    "        return False"
+    "        print(\"Invalid input, use integer only!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    var = input('Input a number (int) for the Episode you want to check: ')\n",
+    "    if check_validity(var) == True:\n",
+    "        break\n",
+    "    else:\n",
+    "        var = input('Input a number (int) for the Episode you want to check: ')\n",
+    "\n",
+    "var = int(var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bitte gib eine Zahl ein, damit ich Mathematik machen kann!\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "False"
+       "65"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "budget = get_budget()\n",
+    "var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    var = input('Input a number (int) for the Episode you want to check: ')\n",
+    "    if check_validity(var) == True:\n",
+    "        break\n",
+    "    else:\n",
+    "        var = input('Input a number (int) for the Episode you want to check: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
     "\n",
-    "budget"
+    "room_regex = [\n",
+    "    (r'wohnung', 'Entire home/apt'),\n",
+    "    (r'haus', 'Entire home/apt'),\n",
+    "    (r'apartment', 'Entire home/apt'),\n",
+    "    (r'familie', 'Entire home/apt'),\n",
+    "    (r'raum', 'Private room'),\n",
+    "    (r'zimmer', 'Private room'),\n",
+    "    (r'wg', 'Private room'),\n",
+    "    (r'hostel', 'Private room'),\n",
+    "    (r'geteilt', 'Private room')\n",
+    "]\n",
+    "\n",
+    "def get_room_type(sentence, regex_list=room_regex):\n",
+    "    for regex, value in regex_list:\n",
+    "        match = re.search(regex, sentence)\n",
+    "        if match:\n",
+    "            # if a regex matches the input: return the corresponding value\n",
+    "            return value\n",
+    "    # return None if no regular expression matches the input\n",
+    "    return None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Private room'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "            # get wished residence type\n",
+    "            query_res_type = input('Welche Residenzart gefällt dir besser? Ganzes Haus/Apartment oder nur ein privates Zimmer? ')\n",
+    "            # normalize to lowercase\n",
+    "            query_res_type = query_res_type.lower()\n",
+    "            wished_room_type = get_room_type(sentence, regex_list=room_regex)\n"
    ]
   }
  ],
@@ -132,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
