changed a little bit, added an eomji 🏡

--- a/airbnb_bot/try_out.ipynb
+++ b/airbnb_bot/try_out.ipynb
@@ -183,11 +183,11 @@
     }
    ],
    "source": [
-    "            # get wished residence type\n",
-    "            query_res_type = input('Welche Residenzart gefällt dir besser? Ganzes Haus/Apartment oder nur ein privates Zimmer? ')\n",
-    "            # normalize to lowercase\n",
-    "            query_res_type = query_res_type.lower()\n",
-    "            wished_room_type = get_room_type(sentence, regex_list=room_regex)\n"
+    "# get wished residence type\n",
+    "query_res_type = input('Welche Residenzart gefällt dir besser? Ganzes Haus/Apartment oder nur ein privates Zimmer? ')\n",
+    "# normalize to lowercase\n",
+    "query_res_type = query_res_type.lower()\n",
+    "wished_room_type = get_room_type(query_res_type, regex_list=room_regex)\n"
    ]
   }
  ],
